--- a/style.css
+++ b/style.css
@@ -68,7 +68,7 @@ body > div {
   position: absolute;
 }
 
-/* ------------------- SHAPE 2 -------------- */
+/* ------------------- SHAPE 2 (fork) -------------- */
 
 .shape-2 {
   background: #e97676;
@@ -105,7 +105,7 @@ body > div {
   left: calc(50% - 0.5rem);
 }
 
-/* ------------------- SHAPE 3 -------------- */
+/* ------------------- SHAPE 3 (skull) -------------- */
 
 .shape-3 {
   background: #191919;
@@ -158,6 +158,53 @@ body > div {
   border-radius: 0.4rem;
 }
 
-/* ------------------- SHAPE 4 -------------- */
+/* ------------------- SHAPE 4 (eye) -------------- */
 
-.shape-4 
+.shape-4 {
+  background: #0b2429;
+}
+
+.shape-4 span:nth-child(1) {
+  width: 8rem;
+  height: 8rem;
+  background: #998235;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  position: relative;
+}
+
+.shape-4 span:nth-child(1)::before,
+.shape-4 span:nth-child(1)::after {
+  content: '';
+  width: 4rem;
+  height: 4rem;
+  background: #998235;
+  position: absolute;
+  transform: rotate(45deg);
+}
+
+.shape-4 span:nth-child(1)::before {
+  left: -0.8rem;
+}
+
+.shape-4 span:nth-child(1)::after {
+  right: -0.8rem;
+}
+
+.shape-4 span:nth-child(2) {
+  width: 7rem;
+  height: 7rem;
+  background: #f3ac3c;
+  position: absolute;
+  border-radius: 50%;
+  border: 0.8rem solid #0b2429;
+}
+
+.shape-4 span:nth-child(3) {
+  width: 2rem;
+  height: 2rem;
+  position: absolute;
+  background: #0b2429;
+  border-radius: 50%;
+}
