--- a/style.css
+++ b/style.css
@@ -36,6 +36,8 @@ body > div {
   justify-content: center;
   align-items: center;
   background: #333;
+  padding: 1rem 0;
+  min-height: 20rem;
 }
 
 /* ------------------- SHAPE 1 -------------- */
@@ -450,4 +452,303 @@ body > div {
   bottom: -3rem;
   right: -1rem;
   transform: rotate(45deg);
+}
+
+/* ------------------- SHAPE 10 (Bee) -------------- */
+
+.shape-10 {
+  background: #998235;
+  flex-direction: column;
+}
+
+.shape-10 div {
+  width: 10rem;
+  height: 5rem;
+  display: flex;
+}
+
+.shape-10 div:first-child span {
+  background: white;
+  width: 50%;
+  height: 100%;
+  border-radius: 50% 50% 50% 0;
+}
+
+.shape-10 div:first-child span:first-child {
+  border-radius: 50% 50% 0 50%;
+}
+
+.shape-10 div:last-child {
+  background: #eff33c;
+  border-radius: 3rem;
+  gap: 0.4rem;
+  justify-content: start;
+  overflow: hidden;
+}
+
+.shape-10 div:last-child span {
+  background: black;
+  height: 100%;
+  width: 1.8rem;
+}
+
+.shape-10 div:last-child span:last-child {
+  width: 1.3rem;
+  height: 1.3rem;
+  border-radius: 50%;
+  align-self: start;
+  margin: 0.8rem 1.3rem 0 0.5rem;
+}
+
+/* ------------------- SHAPE 11 (cup) -------------- */
+
+.shape-11 {
+  background: #293462;
+}
+
+.shape-11 div:nth-child(2) {
+  background: #fff1c1;
+  width: 6rem;
+  height: 4rem;
+  border-radius: 0 0 2rem 2rem;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: start;
+  padding: 0 0.8rem;
+}
+
+.shape-11 div:nth-child(2) span {
+  background: #fe5f55;
+  width: 1.6rem;
+  height: 0.25rem;
+  border-radius: 5px;
+}
+
+.shape-11 div:nth-child(2) span:nth-child(1) {
+  margin: 0.4rem 0;
+}
+
+.shape-11 div:nth-child(2) span:nth-child(3) {
+  width: 1.2rem;
+  height: 1.2rem;
+  border-radius: 50%;
+  align-self: end;
+  margin-top: 0.7rem;
+}
+
+.shape-11 div:nth-child(1),
+.shape-11 div:nth-child(3) {
+  width: 3.5rem;
+  height: 2.2rem;
+  border: 5px solid #fff1c1;
+  margin-top: -1.8rem;
+}
+
+.shape-11 div:nth-child(1) {
+  border-radius: 1rem 0 0 1rem;
+  margin-right: -1rem;
+}
+
+.shape-11 div:nth-child(3) {
+  border-radius: 0 1rem 1rem 0;
+  margin-left: -1rem;
+}
+
+/* ------------------- SHAPE 12 (house) -------------- */
+
+.shape-12 {
+  background: #6593cf;
+  flex-direction: column;
+}
+
+.shape-12 span:first-child {
+  width: 10rem;
+  height: 10rem;
+  border-left: 7rem solid transparent;
+  border-right: 7rem solid transparent;
+  border-bottom: 5rem solid #243d83;
+}
+
+.shape-12 span:last-child::before {
+  content: '';
+  width: 5rem;
+  height: 6px;
+  background: #eeb850;
+  position: absolute;
+  top: 0;
+  left: calc(50% - 2.5rem);
+}
+
+.shape-12 span:last-child {
+  width: 10rem;
+  height: 8rem;
+  background: #243d83;
+  position: relative;
+}
+
+.shape-12 span:last-child::after {
+  content: '';
+  width: 3rem;
+  height: 4rem;
+  background: #eeb850;
+  position: absolute;
+  bottom: 0;
+  left: calc(50% - (3rem / 2));
+}
+
+/* ------------------- SHAPE 13 (guitar) -------------- */
+
+.shape-13 {
+  background: #f3ac3c;
+}
+
+.shape-13 div {
+  background: #998235;
+}
+
+.shape-13 div:first-child {
+  width: 6rem;
+  height: 6rem;
+  border-radius: 50%;
+  position: relative;
+}
+
+.shape-13 div:first-child span {
+  width: 6px;
+  height: 2rem;
+  background: #1a4341;
+  position: absolute;
+  top: calc(50% - 1rem);
+  left: 2rem;
+  border-radius: 4px;
+}
+
+.shape-13 div:nth-child(2) {
+  width: 4.5rem;
+  height: 4.5rem;
+  border-radius: 50%;
+  margin-left: -2.5rem;
+  z-index: 1;
+  display: grid;
+  place-items: center;
+}
+
+.shape-13 div:nth-child(2) span {
+  width: 2.2rem;
+  height: 2.2rem;
+  background: #1a4341;
+  border-radius: 50%;
+  border: 4px solid #f2ad43;
+}
+
+.shape-13 div:nth-child(3) {
+  background: #1a4341;
+  width: 6rem;
+  height: 1rem;
+  margin-left: -0.4rem;
+}
+
+.shape-13 div:nth-child(4) {
+  width: 2.2rem;
+  height: 1.6rem;
+  border-radius: 0.5rem;
+  margin-left: -0.4rem;
+  display: flex;
+  flex-direction: column;
+  row-gap: 0.3rem;
+  padding: 0.4rem;
+}
+
+.shape-13 div:nth-child(4) span {
+  width: 100%;
+  height: 0.4rem;
+  background: #1a4341;
+}
+
+/* ------------------- SHAPE 14 (Window) -------------- */
+
+.shape-14 {
+  background: #191919;
+}
+
+.shape-14 div {
+  width: 7rem;
+  height: 10rem;
+  background: #f2ad43;
+  border-radius: 4rem 4rem 1rem 1rem;
+  position: relative;
+  overflow: hidden;
+}
+
+.shape-14 div span:nth-child(1) {
+  width: 2rem;
+  height: 2rem;
+  border-radius: 50%;
+  background: #fff58f;
+  position: absolute;
+  top: calc(50% - 1rem);
+  left: calc(50% - 1rem);
+}
+
+.shape-14 div span:nth-child(2) {
+  width: 8rem;
+  height: 8rem;
+  background: #e08027;
+  position: absolute;
+  bottom: -3rem;
+  left: -3rem;
+  border-radius: 50%;
+}
+
+.shape-14 div span:nth-child(3) {
+  width: 10rem;
+  height: 10rem;
+  background: #824b20;
+  position: absolute;
+  bottom: -4.5rem;
+  right: -5rem;
+  border-radius: 50%;
+}
+
+/* ------------------- SHAPE 15 (Trident) -------------- */
+
+.shape-15 {
+  background: #1a4341;
+  overflow: hidden;
+}
+
+.shape-15 span:first-child {
+  width: 5rem;
+  height: 6rem;
+  border: 1rem solid #998235;
+  position: absolute;
+  top: -1rem;
+}
+
+.shape-15 span:first-child::before {
+  content: '';
+  display: block;
+  width: 1rem;
+  height: 17rem;
+  background: #dda13d;
+  margin-left: 1rem;
+}
+
+.shape-15 span:last-child {
+  width: 9rem;
+  height: 8rem;
+  border: 1rem solid #dda13d;
+  position: absolute;
+  top: -1rem;
+}
+
+.shape-15 span:last-child::before {
+  content: '';
+  width: 9rem;
+  height: 1rem;
+  background: #998235;
+  position: absolute;
+  bottom: -3rem;
+  left: -1rem;
 }
